grammar_to_ply/error_msgs.txt
../programs/c/functions/output_programs/errors/all_1removeerror.c:1:2: error: unknown type name 'NAMEmissing'
 NAMEmissing
 ^
../programs/c/functions/output_programs/errors/all_1removeerror.c:1:13: error: expected identifier or '('
 NAMEmissing
            ^
2 errors generated.
